remove plex from kustomization

--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,48 +4,48 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:hGf1/m+8k2Z+fzRDT2hhwvFb8wty79YYuu9jF6EqEtg8Cm8pwwJG7gDSuEiEkvGwP5y/7+yLvOjulDSbJSZvbko=,iv:cjYvP9xExunR51ZdLDvHaL4rCRK+K6V7a01VDFtqGxo=,tag:aFqGB6ZRI1zPxuROV7jmcg==,type:comment]
-    #ENC[AES256_GCM,data:8/qB34/JJjqxOdJaeudJQu7BCWDHzjVdmJYXaiJyjtbmrlRGhGnZKEoWhnY=,iv:ONts9lr4PejrHRB9BFKt0aCJL5CcCF4/7jullbp9ni4=,tag:UOVs1FgiRIYFIudRzC+BJw==,type:comment]
-    VIP: ENC[AES256_GCM,data:VLU2odtceqIDOiSjFw==,iv:wDu9IHP1tC6CxII9DiGv4ItioTuxvw4ZKgt79cAbDXk=,tag:SAkwkkfL5OJq4zfwF7F1vQ==,type:str]
-    #ENC[AES256_GCM,data:2NVSrsk7tgJH0JS+zE2zCY0QYtI7Urkg9Y/k,iv:nWw/eckGUhdLJERUOv7LalrpvVJpYdxnpQ2ANdbObsE=,tag:2obifrn3vc++Gbk+MNC/rQ==,type:comment]
-    #ENC[AES256_GCM,data:JiYnGqCAQTUIKKNdVnvGE+bk2WnAcVQnkIXmZd1MD7bJlsdJ8nE0bjX+k+7+S5R/vfHPzlghMnIYgibz5gn9KNautb+/jn2440qld0XVdc7k/vovjT5pY/g=,iv:00FI58U1bjBs6bAKCZvxMPGmhcG97i2M7GjDg3jlzCQ=,tag:59nHJZzIZnUZJbdtC+dwww==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:Tag1GZPnQjBMRDaNbQA=,iv:HqLQRaSH3ZtWFuPItKZqcS11ZfAHrNouZWUCDTdozmY=,tag:MZqaXgG1nJPYHFrklYU0Rg==,type:str]
-    #ENC[AES256_GCM,data:pcBpZLw4s+DLwlQE0ubVDL6bjYVj5JXgCPkhXNRPRSCzVw==,iv:iBZ01TB4rSXNqNs0qJS/Yot6Dwwk24yypR8Yhk8+RDg=,tag:UDyCNt02EQjrHoMz6glRUA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:5jN7x5NumunJUlF5eQ==,iv:i6Q51t+xtz5owJQSCBP0gcSHZW0JMHdTCvq20jq7V7M=,tag:9QwG4R3IFM09t+UNVsMFlQ==,type:str]
-    #ENC[AES256_GCM,data:f2GA5WkbRyLvzxxDmgjZ6cIYgnI+fnCHofG/lHvi6WaFfo4rBQI3C99o7WqGPSs=,iv:RGSy+gsSo3zUbZMgJ0R2mGeZwUPfOxIWL3DriNecygM=,tag:vkAmLGkJ+ZAqeC6ROANFyQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:iNUOa8yLhv/LeD9gLuT3ksrW+pnNNo2VCm7d22i2aQ==,iv:nQqd/rbFyCmexWGPKCHK+V1W28VG/nKhLjjMQq6Q0kk=,tag:+53vFS0tt6EfVu5flx/oMg==,type:str]
-    #ENC[AES256_GCM,data:TnxAgclJGSM3MBSTCPhFsC9/nfKGfWl2C8IoukBjo4XNg4QsMfrioSCR6YyQAXDCEtqrpqaApACOmW+Lzyitopya896RbspA4813soEWtjl7zg==,iv:KEPH16CA206LkK5eUqWh5H0wSBfJd+uhcSKX266S0aE=,tag:188fIIJjAPMn/0+SfD75ww==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:BFJEpXWvl8t/C+n4pgYT,iv:3VJihLH6QHRC/VtYdiN56w6ZQ0/KlTViJhqynIbzg04=,tag:kcujxMKxCKZZ7yZm2VJyvQ==,type:str]
-    #ENC[AES256_GCM,data:ksmF+h+3rNJivi67rkNC0woAZqLg8jlTdpN5TH2QUr3+,iv:vynkfsWguXHWOX70FA9Mo5RMY8xccmV8JUsB4sBX2Og=,tag:d5RmdZqs2Q+HzqkO8Sbn1A==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:+nEd7e3HOvsQuH+VolnG,iv:M4ru9Y/WyAKLuR+60tyyYu1jiNGXr7lEd4h/+c41SHk=,tag:QHcDqNinPhE5JlwURHjnQw==,type:str]
-    #ENC[AES256_GCM,data:dJ2w09ei97PnuMkRM3ZeLKdzZkG87gcNcpcM1P0g9LlOUows57GmTwCvtiR7VQSrC22/tE6ZQgJbEcux7qx4yBRXQ/itm11KXu0U2zBl24w=,iv:52lfVcd7zJBGajMEy6uT5nRF2x26id6w/RhxeuPTMwc=,tag:0/8QxXF6MSYiDeKydiWXKA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:Udd2PFw4SSpj+h2KBVX4,iv:oU2c8mECjTJ9hdjM1irzLcUYubSjiKXA8EGqxyROds0=,tag:XaYgHYMTw2iQoEhNPFWa1A==,type:str]
-    #ENC[AES256_GCM,data:w9lL0+aNA7By/e+eWgKamI1vtdkc49rX1vTlB4kSFaD6/bsA/wRNX/y8O2i7P/Pm1HNX6Hlq7M1SV5YAU/AEez3kAgRlhvwHHx+JUIRaAc8nQIJEbcvF,iv:SOa1RjPoWWemNkcNnYQ3lxdN3qsYITjqcRTd5YxhR9k=,tag:vUqnExJ8IBCrBzh9abxQTA==,type:comment]
-    #ENC[AES256_GCM,data:SjnJvHKyxrG0WWZ3bOddO6oloYDJAhR4QDBLQElmzxjb1ebFj8jKRUCJ8sfq4tAtfcrp8ER3CwiZmuyvq9b1p7ljmUorixLBT6lCK04Nm9zGepBbLpnnwfOrSWgqP4H7klza8P2uuir8E17ui2+Q90FzIcUvXQMtnMSBVA==,iv:Dn93PhWvq8q3iEU2WyFnWPQQlwwIzOWLhHmmjpgVkwE=,tag:JqMT+LhLr8c0XkDyfjeNLA==,type:comment]
-    #ENC[AES256_GCM,data:9U3lBq3nrbRLeMOYlWr28hNQid9fG9dyJNhac5XYHYz9aM34kAvIQoWcS0xLlmIaPeUFOKr3E86KsvmwjcYZiZzJwAdxHkFkdQGI0w8xXik=,iv:jmbO5nDciXpoWVMWmobnE3LxF0K5D3dACD/AgvEXUrg=,tag:Ba7RK2zjC5z6B5n+EqWIDA==,type:comment]
-    #ENC[AES256_GCM,data:40NYxsQwTfvkoVDzO+0uP+d7ZwDdmPuFBfvb4bGte/A5v8b+8Ic7XNJslmY+V3ckspUr7Zjr,iv:mZ9LJWlsvD/4LVyTczirv2+YDIZ0JvojtYjZETt+ZW8=,tag:ffgWg1SnR6m8QhKBK1BFMw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:EcJQW50S7Me1hDKH,iv:UoGijNvXgbii6sfm1QJfvSTwzPWALfd0yDJzrZy9I6E=,tag:xPcd9WesGEnZ0uWfLY1JCg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:665+70NaAJSjdW69NCZZxpA=,iv:jXRotYDu9VOwOtBbesyZ8ItAul5oC81krcBs30nSAEY=,tag:Ar6JhO1/GDdKIfFsgDpLbQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:y1k3M5pXB6sQNUIso7tgDjevt4E9uO9+lwB1PmMQF9A=,iv:UVrBfK8YiTssGvrwDrPPpsN6FLUjfXuTw6ZgH6Xv5wY=,tag:90V9WE2m27hN58ccHXskNA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:74l17l7ms31AX5C/MaJbUdYTkHHNoon03kfc+XkLB8ZMf8Yc4q6pkg==,iv:MdG8Vce6IHu6aGt5/JHjDUPb2JVM7Oz+ydDguxaSF3Y=,tag:323vckxrVN2mkvtcn5y/BA==,type:str]
-    #ENC[AES256_GCM,data:IdzZFOKlRnqLrE1RRuq1wVnUWFVKtCrpaOUIrRXIRWLFfoEJpaGCSv2vhFMZdBWJXN1UmW6RFvDLbcZmDim5lQ==,iv:vmqeuEwO/JcP4eaZGgubZWN1kVMmHmTFJ7vMYToGTfQ=,tag:eiptKKCMgc77cxaYqScAdw==,type:comment]
-    #ENC[AES256_GCM,data:OvOzSQGDOeQsW/fxEkumQaVpDg8KvS3sX5h3is1hfwWjQwRGPLx+myZXR0EDM9qI+WrWdlzBCKU=,iv:nRToCuaclG3CR5sXBe1Kf+Oz7IuYnYNh2qBPTzT/WWI=,tag:KzjQCKtgJzp4KgOUiyOhhg==,type:comment]
-    #ENC[AES256_GCM,data:i8QvUvWYjE0XTVhPcNjTPssZm7YGr2tMdw==,iv:vY1SjkJvQcBvm5OvqWvcBYpwu/q1qDYID2shn9+wLxw=,tag:CVA38EPAtK1vpsRf9wugMg==,type:comment]
-    #ENC[AES256_GCM,data:VcefRWCBOjBhOQFGPPJBOKSHDkabz64U9ffMF8f28Vdf5xDysVNYSD+31rHYoAoihxL3A4KPI6x6Qa5sloS85eVXWXEI21nzD9n7BFQ=,iv:lg7LubcgPorYFk3hVq6Gncp0db4Ccgabo3Rk9xIi9VE=,tag:ujHPJJw9yFLoE6IYSjlf4Q==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:jtopoOlDtGPOqQCIFcwIxEwPiz75AXJhqJ7lvu7x8PKSzXHgGCU4FzhHxCCLhyUx,iv:HmBAwQZjQdm9QKx6f1MfF19xiZrYxkjntsHYADjJLhs=,tag:hdS5Jg/d9q8HYwmDLZq9Cw==,type:str]
-    #ENC[AES256_GCM,data:dHCcxcIJ5eEq9tQZer25Ml1jIBxDn/F9dPBgTV1i3DZLkSdZt8WR1rHjfEDllM7zT7ZuCrdbOI2OZnZYVlQmg778pcGz7/8=,iv:xUwGpiINQ9H30jfaFJtviBhKBVMKD1CngEvEvKshkcc=,tag:XIOxGtYqZbev4L/AGL7Gsw==,type:comment]
-    #ENC[AES256_GCM,data:1yGj8psXvETJxlczdPygEY7VPkRrYamQIfLdTV/9CV0nzGTyhsEmBeLqra70jXRdQcFRqP2E,iv:UY9xeihLUtzKwTsADE0V20ErGJHpPCIiGl18cF8KLl8=,tag:SrGcg5XM7BK/5xaiqcH7bQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:1FP8snDAAg==,iv:nf6OzECpoJ2oFyLoJdHRvRK6G1piEbMYo1H2unuMMAg=,tag:XeTTzkZSpL7uJ1AvTHrSjQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:u7v5Y98isT5BWmZQqBTBweTLD6Q=,iv:2C1bw1WgvDw/eiiHr5e134x/maBTQHgCuTikrovOlWE=,tag:UlF88gwfnkmWP2d4gplgXQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:PSK/1eeAPGckLG4=,iv:DvgOsyTHHfwagFW07ZpOneDvNXYyNuWhDK7Fe7AZcm4=,tag:vEBANR5z10Rh1V+49wj4Pw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:aJMO8MB8OT+PP16reFVp,iv:fqiPSoecc3xmkR6CUt81ZczGVG9Wo2vmtY8G/blPkQI=,tag:VX8MDGqN4BhleJT9KziAkw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:FkdqsHRDe6Ghv3mCKCveXOVJYws0JHLuqw==,iv:ieTfr0jKBsp1xsVgPVt1VnqR2Um9yZv5DTB/QEnBEoo=,tag:sjdlJm6Nrd7m0HwigV8mwg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:nutElsmkEBnnGMNAkrakyrjd2eopblby,iv:biKns53rPdDGAV9jZMpCnheN4hsBjEtOG3knWHla9zc=,tag:oqrDfuosi2C12FqQLJLvsQ==,type:str]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:A5z6rO5TOQ17vQtGvepEwI9P,iv:AW1dF7igw4MHyxpJt/4kLaPsxiZVoc1nclIlXtlJ+ns=,tag:XZp2WlOVKRPgNsmglOcftg==,type:str]
-    #ENC[AES256_GCM,data:VSh8gA+IocEZ3seEiP0=,iv:XeoVIkBsl7pJy41akODaSO5OAY6zs3wLFkGoeFZsRrQ=,tag:Q/MHzLkBcQwtari/nlToSg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:9BGwXVVsfUuPUzpE+Q==,iv:wOw2EHYggSuEdmknjLF1MpH4iERAGVmtWHueQwPLvs0=,tag:gXtzUf3TYR7DdMYnrwrD3Q==,type:str]
-    SVCNET: ENC[AES256_GCM,data:ReOE+JIlD3G68GrUTg==,iv:4HrMsYDSXzXCdzZ797u1C8As6ho4en0OdTRD9hR9F6k=,tag:Nxx6W5/VNSz3TNnWbzesKw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:oLTjKw==,iv:NAvwWT1HuJ2k9hlkEdvtKA1MgvPgQF7lZnu2Z5zt9S8=,tag:f4NqvpEQ90K5w3Xhv6+DrA==,type:str]
+    #ENC[AES256_GCM,data:EmtL/VCihGSoiyn4eJkVoqyMXYNvaA0H80angZOQiLPZUweWchROG0eyvEt0M5ldmA36wYfoNAw5xxt/xxUf+Io=,iv:0cA8YNLvJzhrtbRllqlF17ZaiYz2fm7O8GTdTPDdnZE=,tag:PvQXTJg7wrwpO0yUR7Amuw==,type:comment]
+    #ENC[AES256_GCM,data:yoCYnHJZy2PeTYvYkGDmCLlPM+gwZPVGogP+SAFCgi2XdI0bIpwlCAhBz2o=,iv:BkstBp9Fsy891w2ZYned8SWuu10ApbmIr5/GVAALj7o=,tag:ac7dMODH/ziXAUZdhgN1vA==,type:comment]
+    VIP: ENC[AES256_GCM,data:mCDUhcEOHsjs1jwoqA==,iv:q9oC/mqXWy1W3fF9ZQZdIdpyi8WavFCbuY4DvxtqKms=,tag:G1u0g8rDDLz3qhgi8jkzRQ==,type:str]
+    #ENC[AES256_GCM,data:a6dDCxTTIzyFAF7wGhqzF1B2nuBFQ4Eaq5mi,iv:sBj+Z4iLdiOVHrgOG+BgrOeuuvkbxg1b2DKLjRAQaoc=,tag:2z1GRivf/h/YNgIuH19P2A==,type:comment]
+    #ENC[AES256_GCM,data:gLDUIN1Db6j/g13Mmuuglrgo41tXara59ILT8OUeyFjHCk3V8Ud+59Ixc90r5ckRPspKdED2hhRqzhByvcVFUKGNrtmBnXju5gG86Oez3ahKN/MT4jyQhEU=,iv:7uG4yiMkuTEtUrnkwcZ/LI8JKm34UNeh65OwKN/bOQI=,tag:96twX3d8FSg6I69bCg75JQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:heHOrK0F4+GUmQH/AJ8=,iv:sjNktIMBVm4uciAKSw8tO36qCgRwKXC8hAxiMRf+pwY=,tag:/kJB+xmmubK+F+jP87NlDg==,type:str]
+    #ENC[AES256_GCM,data:bZUaKJvelWmE/zdLCl/jarB+MTagT5asbcRaz9tADy6Kiw==,iv:Tn43Fqzhx5DhWPydwhK7wJIDEoFnQofJOzLD3O+ESMI=,tag:sGzPl9n0LetoXrpfs/gJTw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:uraJi41Y/jlklPpwqw==,iv:qgeuHQDA2elEhX4DXp4rZM+EZJ8qxyOZx9vjd6vwdwo=,tag:6rSg+ePB2+Gse7oxyGTAgw==,type:str]
+    #ENC[AES256_GCM,data:RwJyiO3havM+E9K2l/5TTHF6Q+4Q6wyaggyqgXycrHGBsTlORTxLPCOejUfyQJI=,iv:dgrzm9fpymaX+YnwIZIfThy0cCJwIhVl7CF1Ji6uLyA=,tag:S90Zv5XPUhq+R53aKxRgzQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:PpRkX298//HoarDB5/WFTfRd0v25sSn5DBDvo4yDUg==,iv:QEP2AMol4vSPH1cvO7uFY/qxVUnHnjcfeefk20QBLDA=,tag:duouelWwZLT46BidpeND5w==,type:str]
+    #ENC[AES256_GCM,data:ag1mTYeF9uQAL6P9fJYl59IDVjrePPHxYIlM3wjZVnOodjtwCkbhbgkB7kjuVuJnLtV67PVdirN5wiunHNeCG3kaonLex56JS0HiKWxOHZ5mvQ==,iv:rGU6V18Xmx7BSteRQRXJtZ8jIG2zjoU94w/N5+cPHXo=,tag:Usouu+WubPFp2nQQ7qexJg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:jqari46lHx39deQIxrHE,iv:Cq5Ba4CVZvO6aScZqamZ+bxQHHVGU9jfmeVm7O0+tkE=,tag:F5rVv5WXKoK6dpdbEOSTWA==,type:str]
+    #ENC[AES256_GCM,data:I/bFx89h0V+CWbwrCUk08lRIHxt0b3OloX5EjBRyf5+o,iv:lfCq8uw1BCr1TD9kf7XFEhLPnOGnEpjKmNHdjqprDC0=,tag:FsBbocU1oRq/E9HzvJ6Zaw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:bsMHA2BvtTJQWAC2gg93,iv:V/rWJGL00teGQOHcUm2XpObrI645C47xuC1drVZnIZs=,tag:CyBRqNf1B+I1KsNNEquVpA==,type:str]
+    #ENC[AES256_GCM,data:w09cvD8Ia3uFKPgsTWMx5w+DAsqqlybOIC+O6yLk3+LwIA/VlR26+lvuPsPLTrbPEKve6eNtuzNC6emNIHjjjHy6eDLnNxcyuLoe54PPn7A=,iv:etDCwsxcgD5nyt299nD5iJqiGsbXHjfRQVGFTmOrPXM=,tag:UuA76EQZTi3YlMmKkitidw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:EhNXhyuvKCwxkoXKbl+T,iv:laVyrLPwUXl7Tpu5brpiJmA0Bp32ToWH/Ee3c63NEbg=,tag:cZ8+6hbMmC1KHctTt+53YA==,type:str]
+    #ENC[AES256_GCM,data:5Zdule+5KKfOCpFEO5zfk6B/YhMMXwfI0qlp01RTJEwken81K7X1J3ElNUiHeQIFWwYQLGt6/pDzQupEXjOVNS6cikGWZVNnTyychNopM9Spcp4s1iHz,iv:B/72/LxXumU2qkGCjuvvTrL7Qyefyn+54Lr0IzKvH1I=,tag:+ceNjHm5BSJmqfSUqfcRQQ==,type:comment]
+    #ENC[AES256_GCM,data:cSdYBE7jqXaFlZZu14LjStiitvuK1J6zXfv47zm29quQ5V5Ae9qC09qOuFsUtBYI9x9GxKJYcEVH80WxJSapUhO4UcfnEP5ndTTrA8zjRIEVUK0tD9Q1tLJN7DkenbmTnlUgZtvW7OoDVQ0lYKyu3yZiup0TooreB3cnVw==,iv:ZbvUnmHNphUzzyhPRGip3CLQSMlXsdfMMhyu8GlyX8s=,tag:qW4J1/KRgQyqVIz7kGD3ig==,type:comment]
+    #ENC[AES256_GCM,data:C3Trrbb5GbVt6QqR+utmF4+GmdAqPds0+aSMogPz91GkHigw5IGraBjmI6mIp0sR2akwL6zhcFZmNfXICflRg3D0zfSWalfpMyVfYilPsQw=,iv:tWMKhpsYdKMQ2hNRkwjGsJEZCacIbfjbUSJ+92D0VDg=,tag:W7+Cpk1pP8lWNxQsfiiaDg==,type:comment]
+    #ENC[AES256_GCM,data:AFqRGsbTfoAka2ZtKP7ubgDTgQcnkrrVlrdeJL03+FZvkjAH+gQuMrYGJMvSjoEHlX07IytN,iv:7LZY6mOA565uuClJytf+HQ1Tz4t18NQ+N6UQ2E+G//g=,tag:u7G9cIm9V4DsCmwXcbrrWA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:SX/bZV5SAw2ij4vx,iv:/MrmRE7e/MARPAZDE87O9ZR6RQ94c5cQ0i2nMLqF6Rg=,tag:n8T3Z9oZJcy4m9gQyM+yRg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:iec2nZleDOIK7W3MscRnc4M=,iv:+E63J1iWWnaPbu1AJebIQ2Z2mJNqOcTw1OUiWSXZ7Qk=,tag:PhGr59WA4brxXdcMiWM4oQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:aFefHXsmGhL1VZsOEFfvcYzy+4WoJKuTP5xgwby1xTo=,iv:F0kRaCGeV7jniQfKVfTO0wooT3PLRScSaVQw6u0fkGM=,tag:B7q/PYPrZse3RoyGePuePA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:anjMx4RMNizCmN9mf0i9qzZdmgyVAFt88GHNXf5/5gSq8i7aDFYLzw==,iv:8NixNGee8btv4RU1wEqWdEmPTGDhWM8RekmZIQmwi20=,tag:cfi4rFRqDqE+oxo5MaWtSQ==,type:str]
+    #ENC[AES256_GCM,data:6A+CbneI/S5X4+T/8ylV5mRO3OP5z3WrD/nnXdaX4odHrrWn7NKMV6GWzQjjtNH9LxlikYBUtmSCCpgAOzFHTg==,iv:fcnc/3HQ4WvHXqCXFLzswUdBa7K8fW7LdRr9PLNwY58=,tag:unwbGZ00ygr3flTgHRbcLQ==,type:comment]
+    #ENC[AES256_GCM,data:X7RkCsTh2XcS2jMWptlY1y45wzIs1SgoHNct6VULVddh+o9Xtxe8JcWjWig2tmOQR39u57zTAj8=,iv:Ft/dlCrLmcFNPN7uyqg6mU582ZghESFbq+AO6y6yAt0=,tag:UNVHdLLqn0eEfqBd96ZG9A==,type:comment]
+    #ENC[AES256_GCM,data:wfueTmjCtmRUzWhXxUghEBHp4rZzw7aDfQ==,iv:YLq39VCWhQZ2yGvJLUh/el1IzdMUHgdSxgyHkZb7c98=,tag:xSDhqLgMVb1o5v9tkRZtow==,type:comment]
+    #ENC[AES256_GCM,data:FeWDMnivggvYj62Wkhst8E18BTq1W6gCphb/k+mUAv8VZ/LytdGpgOm3GSdgyiZgnqAI4K8xuReIyieLq9h6ZXZueX/lTi7yUbp/dgo=,iv:qjZgYK41P+RS0F5JfhXZyPW9PS1ujKneJZqtJ2JP28Q=,tag:5E44Ux9q2z8zkU9T6nJ05g==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:lRdQvtb1AZIKrhYS+CvRE+yDaMBedtKL+vVVoM8Aty3/2el6fS8C+me3G5y40Xfy,iv:dYsbUMelcb8Tq2+G0JfEvQS3zDIP1Zd3Q4DcC5jfVmA=,tag:wEo6IWpMBg/tf+vJvXiOyw==,type:str]
+    #ENC[AES256_GCM,data:aSilUakbbMGPmgNhJQwL7kftJH8PtCKmNCvaZMC8MdqiPiUUTMBSsmC/T0vD0My1StvezBXCTRBoVp/AdHUXM+FED5y5FlQ=,iv:BAM3RDJb3Oh4fmRriX83UqKHUi9Sn1jTBQ30oKcRRrA=,tag:IlfKTjHQFEbNwfDVu2/B7g==,type:comment]
+    #ENC[AES256_GCM,data:s5OfkOhoiZaCzP9/YWKUPrMvD6+f7rMiVg8yGt3j/wAvgNkhEL7VpMlQ5j1pHZBAveIHg34K,iv:U8vhnZ9z8IfwfbQvXIjEj762kt8YQoY4GCzGHR5tj5M=,tag:Tl/QjGGv68HwDhJ98Py1Pg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:BUEuEN6T+g==,iv:6HlGVoIUQfnzpPvTQHJaoQ1QoRJC9ks321w+4/L93wI=,tag:bEVyTFE0eOrb/oAdh9s8vw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:SL6Bys3NFrvzuR4PkEWQ/GgPYzY=,iv:j/cz4DV/M+GhPjtkrFuh/eeLFyB3tFt7xt2DuLCJetA=,tag:x5sXfFukgfXX0liM9WLOog==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:iMxwCkHzObDsmR4=,iv:CQp0mYc6bgj1rH9DcKuWkA6xLcZyQpfZFxjPLQXXeVc=,tag:M445plSTAdumvJyY2jjnUA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:CW/kGwF7g4fkW7MzUC34,iv:ygWi+A2UcQbBveZro0KdzIhbuVdA3nVRaXBTJAl+5Kg=,tag:DyiHRyfbty9bQqqyqFLpPw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:LWmQxFsFKUcl9/CYGXVXvOlh0O3dvLAbUA==,iv:+bmFCgdof5WTYS2v7qrzglw2I8goQzEccBndYLawldk=,tag:eVu3f6CnWrydREETNwF54g==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:rnW2Avg9NQ/IxjUttEdtgNY5qafpCW0J,iv:ow059phJ5F4NDFH0v6VIq/zl5mwl0E71lKXbIEwU2vA=,tag:cbFmcf/301WR1S8UrA0ciw==,type:str]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:1T/+yJ15OSFfsUSH/Iev9s8X,iv:xoe0yoanFVjH8OehoPKkqaTzIcH9cEY6wKSU7LzMOOo=,tag:YtgeM5uDWaGcT7wtJKMzWA==,type:str]
+    #ENC[AES256_GCM,data:r4qn1WlizsuEdfkxK2A=,iv:o3zfvVmsE0mSeGMPUfD7j5F6yvOi+97cT081l17OIu0=,tag:aCTTj7qZ4Oq+TvekChR/5w==,type:comment]
+    PODNET: ENC[AES256_GCM,data:5Jn6wgcfR/DeAoLvRQ==,iv:eoObpC058uKVU2msVr6QtvpKbDp/yNV/3ZMrZ7oCcB8=,tag:u7A/XeboF15uB2/jeI59iA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:zoEXXdC9lhWJDqTIDg==,iv:cMh2MDEFh2IL5bGdvXP/EEdUeV6mBAhwKoPOtTbk52A=,tag:Z7sXqet+OODbQqp/sY15cA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:gkfgDw==,iv:HUKPXbnvN/O0u3n3+oq/84bbOgZVXB5bQh5V/ydlMPw=,tag:24s2HvMxJStwG1mDOL1lCg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -56,14 +56,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGQjgrMTc2RnhvVFVrb2o0
-            UzVoSWM4V1NaWEcrK2VUb3A5MTczajR3azBnClRyL0lwcVRkWTRDdHlxMDlmMk9Q
-            cHpabzhnakNjUHhxQ3ZETWc5cUJxdnMKLS0tIEFvdEJTbGtoSEVKR1R5RUw4MGxF
-            c0pxcjkzL3FMUnMwNXNTQ1V6Z25lVm8KXwCN/HjK9dZveoPC8VHSUnSUniuehAcL
-            yTVIZRturG+jXKFNFQiTVHbhgECyFval9Pj7vydKR0kd8c3hXmzi3g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKU3MvZzRsU1dkTGlDOUxU
+            L1ZYQ0dRVFpmK3pPWVRCdVAxaG9PWSs3YzBBCms4VVo3SWNFdmZSc01kd3lMSExp
+            dURXdVdSVDA2U2hUMkdiOGVvRTJuRUEKLS0tIDdUYThhZGtKL3MrV3R3VEpIbGpX
+            M2pqZGhiUGUwT3Z5R2sraXRtM1d2dVkK2tDO/mL8TNWYWlF1DaNp+QJQDAYQk0yt
+            uZdnbrVwwiLySTX9mDGf3e5BVDl/fwuoIa/7oNaS5OrU7v0bfjfeow==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:40:54Z"
-    mac: ENC[AES256_GCM,data:Dq7nlIYUZrB9vXX94b3xIoxCXTSiWTpC6Q79vkFBXN40ilbgCJcImo0cNKWZjAkrNJR+F++DCmdSD8vKCn/wscC7GZO7akfvzZmd9fEccXrkFlw61/mu7ZOjVXQiRMZApnhhyHr3ONOZQPNadeekBZ/qSRIv62AFpRmESTGTZ14=,iv:hAWaOUYz/o5DoovtLut1PH7ZPbSnk2hglFARguvhLlg=,tag:Z6Rf4sUOYB6gCOW7r5FKng==,type:str]
+    lastmodified: "2025-01-09T15:44:02Z"
+    mac: ENC[AES256_GCM,data:j1u0rwUwQZWVwCQ8fBn9Tv29wGxU/YWR2QY0diTsNHBrB+WTLx9vkJ90t38sWDYyWUyTebmR/tpWkrZ4RGZ0PI3QBjXU9rmZaa8LFewM9eUygeMmzb1+dhMJStni7oKAYVTgFmbpB/ZAags1+UhpHBuB7Q59A+k10UGQfjsp2fQ=,iv:qm6SHd715PFnq5CngWhJfMgx3HQqPQBCzGJloFHG9O8=,tag:b10W8bK7keDVGIBMJ7Yh3g==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
