--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,44 +1,44 @@
-#ENC[AES256_GCM,data:VnuplBRTKOCUZ7JIl8109KHBhv6JN0Lzi0PTmRUQcXnIkS9vodVPBkmsZ9v7AiDRIVXdgx8RDJfuXMTmllsijJ0=,iv:1v7Lkn/Wpb37+FhgpiDBXzmHT2J8mDHz/I8uTeXQNEA=,tag:X4Vo1BZFn2AHIxU7Xp0zQQ==,type:comment]
-#ENC[AES256_GCM,data:iz0d0GLQVpQqLHAyjYhaKno6ALwPI6/ROjNzMNljwp8yV/adMchFXgWhQwc=,iv:4R/s1Rg0j1BXqavyq3rndw/sw1rylgPv1jZGEUmo+Eo=,tag:7VCZ3nclF7uDMdpI35nvRQ==,type:comment]
-VIP: ENC[AES256_GCM,data:gdEmSUdWPsj0UwjFmw==,iv:zqBttawvNY0WfPvqOGgPcDqRDTzS2GdpzcrwJFcCH7g=,tag:Y1Sfealw/0exIUXoLGtqZg==,type:str]
-#ENC[AES256_GCM,data:FAsoI1MYNMbWdX+SqWzESQmDL31+rfGC78oP,iv:H+XsEuyjCc7NDpvRH+gdC4iL/Q/wczLELRhRGP2YMQk=,tag:5BEEEbx2J+X+QUU6gvbTzw==,type:comment]
-#ENC[AES256_GCM,data:W5GNh4Jfxn5/li1z/BXgO5a69dU6vd8Fe0DEb24VuVEku+mZRG0/wW8vNepTKgfosTXQG0y8lVN+hgd1GiSWZFyhGp+imWJcSiUusGhVNlV8gYqcqRpgPYE=,iv:RI6j+rXpkf2GCW6K5VXbCF9Rgm09gX1komsMry9jlHs=,tag:d1/lzhy5ly46irJdzZ3W7g==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:DYW/Mtp9GbQz9uIDKCE=,iv:9NpLwM0NUFcfeQ7ZZlqyMEjgZhGH2za8ss00i5xuNuo=,tag:El6Ga9aqL6qvirIqlkOFOw==,type:str]
-#ENC[AES256_GCM,data:iyaBXyhbU1wT029z3soZJyH99eFAt5MKhCTuTrqtJ9Wytg==,iv:yCQuHtGwCNZsyYG8ogULOEEzfEFOSJhKzlB7Jty+YsM=,tag:Gp70KeZYUSPeszHy/BUKPw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:wFZeDX+yb6q8Ic/uQA==,iv:Krp6rFXvqrHsevHzW9lKRD090KW0otAL2ADjBS/RYN4=,tag:ITBikI6c3+h3THNdvFoyjA==,type:str]
-#ENC[AES256_GCM,data:mzopPeRE8iVajdGM3SaQMo2W2NjF4BSAENAjfwOHTkW2vjozv81IkGsaz/ISjIo=,iv:WgRRt7OvAW9JqQX/+Jc8cBztNsbMk+wu2yW4cfXgiVY=,tag:QT2RlXTkhx0RoAluGmAHjw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:Qlp8qE2Af6ux7LCZnTbLwwcTkgaXM/mcAdJQDZFBcQ==,iv:kNh+P3jo1b5kDcES+l8uDFOnLQz58W+hxdghFfIOEw4=,tag:1LF2bNLvHh/1C/TbrTGn+Q==,type:str]
-#ENC[AES256_GCM,data:aaYct4xPMy3qGAsY5+C8eq8r0lg2QXBdnjkK1N2md7ro8haVd3fQjPqTVgbg0QXZZJ9uWz/rFEw6d6tUcD7eaSJeJByPSMwF/WVrI7imnTp9ZQ==,iv:9FWmxXyQmGOns4nbuRqU7QISnuJLok2scelz1FOdFhk=,tag:m6m0kPTbbKqwyqvZW3O5yQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:0lAnV/n4AIsZxNxBK6MM,iv:hADftuVbRcZMOj6Td2taZZtkbNFqrXbtJaomyx8x1fc=,tag:yKx1DFB6Wy6kBq/90w1B+A==,type:str]
-#ENC[AES256_GCM,data:7h9VpYWxhg9Zc5KqhL5AC/kQfkIG8ONfXZUOE+yGdCYv,iv:Mw5aROWsbiamgrIYfL8pwiigg/xXRWRlIDvg4pXMKtI=,tag:kx5tmxEzJH7ed3r5CSBxjQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:+Zwvqi2peMruPVS/gdF6,iv:nSZ8BKOVTwWPOAYJ0qSUKwd19pyVMGTjBNg0eLv2xoo=,tag:GF7FrTCm+AmQO9wJshfByA==,type:str]
-#ENC[AES256_GCM,data:C5TvOdY4+AeiqZM1xhq6Rx2340tar+etGl3D+pKPx64ksQuqwGdNfIOaXEMQ6IinJ0vkDr9X+ot6HIlhlEylzBhVAotGEYGMU03aUT5bou0=,iv:zexEc6ZZ5jAXnKhtNAdusq2QYl58JxSslTSHAj1AfLI=,tag:583oTZ/kf9IWVX5oHHd2Dw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:pM7AbOlI9CfWryRp0cAL,iv:AW1LNB98WutgVWFADWbSEtd5gu7Qy5q9WgGsk9fXdXQ=,tag:h93OaPgbBBn7hJtzVIuq1Q==,type:str]
-#ENC[AES256_GCM,data:DTXZyd0hcFDCsTNKndfWC9eSXweB5OWarQC0WW+30x60LaV3wTyECu848IjjdD/oYWYa9Thl7xlOPkXhQfGQdSVnv5hD4D+5tTobENI+pQvYR8i0c7rc,iv:LUruQDkSMXtebWcZHnPWQ4cUDq8sgDHns+tkexQSAmg=,tag:4KQJNCmOhiWaofb7bYW1Vw==,type:comment]
-#ENC[AES256_GCM,data:F3W3WEb00nQcDPKwiipEIWhEABI1oy0eD09YhplmEPWdpWtjUeH5ADM/8L+uPAMrwXivhc/yttR7Rh1uvaFO62mbTj4RPQ8b2/il+m/Q33RW92AiCbtwHWpcNaDrM82bn2Y0lL/vSwxSkXxcqJdkVFn9ldzZKP0yDIkfBQ==,iv:+cAf5GrN59dh/BUKc2Orf9k3Lhd8piRVGRIRS2kT++I=,tag:6fGSLdH5Sohuf3JYuetE7A==,type:comment]
-#ENC[AES256_GCM,data:2b6wmkvm8NZxJiGVksJM5xSxSfmwbn3IcGEV+8YHwhFdH9Ckru9zWBifdOXpxr1rDVxWt2P5BakL/YUBzNLVR1MF8dib8gUh7MimiZnQpRA=,iv:WnoNkbgJuYvChW/RlCW5EIFcbs9/op5lKT5qHAjOcI4=,tag:4s/Ot5Ur0q46pU2SyOEPEA==,type:comment]
-#ENC[AES256_GCM,data:WGEE+MV6sRJ5i6fEMPhDvapHJ+D8u7DcDC1K+0ypN9Z0dwMxfeYFyLtF2fxMUnua/YbpcNu2,iv:4K677dc/7ebLXMqfBud9oFkCImPmrNzxYKtoITjo/Do=,tag:wYJbOR29b0WYcMoW89+3TA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:C5lEyH2oqqXSN523,iv:W8dQfHvVZ/Klf44neru45R4RmO1zv4q47scqrMlIY9o=,tag:sOQL+2K5NKqgIHMAu7wB1A==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:SZA8o6oeR2mQCvBcqXKbL/w=,iv:5bNWlrYOsqiSTFrewgRzKupmf16wvZA4JUjOOYmthdY=,tag:A9wHcc/cDp7/9Zwb4Y+bHw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:otUXvc/+RI/ICQQ/nbcoiLb7gohW+Ryy6imtJQX0Iy8=,iv:pndf8vRtQ0LEvuBkBnt78VNjzqHSeJWpVs8cvSVNo5w=,tag:oR3mB2Y/nfhE2XrzrVflYg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:TaUmk69OJrerPkJCcNA/B+qgZUnsTd5TwxgKtiexceiTl0M5sRgLfQ==,iv:jQv0DYf8+5TV+zdvtSMCu8fQVyId0R/YIZVhgLaVJQc=,tag:ruKlEZuSi4sAKRhnREIgZg==,type:str]
-#ENC[AES256_GCM,data:CFW763cEp++q9MY8jY95prmlNMBFtXizCIKPWLThSQnJzD/vkZ4KxGm4o0nP/H6TmRdQdyKvmakQf6+OjCK5Zg==,iv:QguA3u/21H+n1LTyaMwl2A0x0h1rW7DuoSRQyAxP5BI=,tag:c+N2PYEI6f7lT044apak3A==,type:comment]
-#ENC[AES256_GCM,data:0ZzlIxfMiN4BGh/CgN8nlBA+PVLpEEy9m/LC52dMTXGzBsFGiLEjdqsXYnZIHxgH05wum3Al8V0=,iv:VTTsS9JmVS0viJH9mBbWRdEBOkoNm+2qhCxM5QAKLio=,tag:qp1krRjNNRLhXvfcho+OZQ==,type:comment]
-#ENC[AES256_GCM,data:v5lmzBSa17x40CAVmcl6fvN/S2eoJEguqQ==,iv:jL7YlST0UN43BcK8fqtK/huj3u7sfYtdPK6ldNB5QO0=,tag:cCNSZkNlGPy8ud7p6QGFYQ==,type:comment]
-#ENC[AES256_GCM,data:0k/YzHDFeF6owG87R3nuIm9UbuUmIE+NfEF+qVKCfxKJlIZn1FQAWr564/aTlhXbWNqjWjpEr2y8iJr6d4LzJYPoXrS6o2+ygZNr4+Q=,iv:v8vd544/i9C9BX+1BRnrifjoyF0DmekFJkZg0iVhCTo=,tag:/ExEyhOLlG4FDbOxTbI8Ag==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:lmy4f8wNodZvOR7xHGeCVZ/KF0XWSiNPvbRPXj1e1tzTNF0wwa5nSmjpBnn5ShzG,iv:c7c1MEi6UuD4rlP2o5fylsnhOfyw4qWqyARjRpiJZaY=,tag:HasZmuIPaYORZu166YDpFw==,type:str]
-#ENC[AES256_GCM,data:dzHnXv1b6Kl0MAjS4lKpsneqYFanT2VRgZ6RvpPRFvkZuxOm5G9mPdFw1I+xXOWFGOKqyLSG8W/yI2+58kIf6l6Ds1ajU24=,iv:/Lg3STqu8gpNLnWvjorDQI7UqAQko9OkSH2J8rCwXcM=,tag:d7XIQMQShC3Nhm2t0zu9mA==,type:comment]
-#ENC[AES256_GCM,data:5HrFVmvxnL7N8SgiogGTAIV/jxrUZjd1gvX8QAG0F/Rv11x3yY8QYK3xSbSQBFeOpCKRJGf9,iv:DcPb1Nq3UYZ2t5FGqkQOBCrvr97cBWPEJ2uNnhk6v2o=,tag:A3LXgR/WR9uQskRcSn0/6w==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:8RXQ0A6VIQ==,iv:Av4U5X8aEt4evpPCEcA/wFyLBfkfroGA0t+vakfvVRs=,tag:73k03FsQvIC5Q+LIMMwzJQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:2HIsx7SEtTb2dsdRJBghLyEVnUk=,iv:Zkl+t//5kpW57wgrdx5KGImIg7qEOXyO9VlsdR8ujKQ=,tag:LnyPkTBvE6j7ZV4SEF9M1A==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:HRZJsdfIwXYxyi8=,iv:JQXvkbAdRzbgdaUsshquEUHVSaVmUEq3D57dt4jj6II=,tag:EOJTc9LeVLwtPktl8/qqzg==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:qgZsHE8sEEO5K5ZLtgLy,iv:uSi5Yl1qSxV3vO/SjzX5f6W7//I4rDHXIOe7aV5ZDy4=,tag:POIg47JSBUGNfk/Vj3J3Mg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:TbcxTaY5jtBKbipnAUEFuV4f/UwZj8fpXw==,iv:AKBTm7I3B3+8ttlnTsNu+4ZNtiyxw5p3GBzgGNPcrgQ=,tag:Yh5cC6N7q8wAgKcKmRgTlA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:NWuM0NRmvfor76yV2Uv2VTjvU02gIwjJ,iv:BVMtFsEcsd8zHdlJfMSTtvMaxa/WSfUb4DIX4hWybo4=,tag:TpajsvNm7bZcOxYdCFC+eg==,type:str]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:48RMB89W/Mh5AFUsj6UfKasu,iv:BBp39Co/ZwTJgRrpN+Q/TE2+m+Jq8GC7b/rMvTvV1qU=,tag:JT0hUhozBEUFxRTaDNWMyQ==,type:str]
-#ENC[AES256_GCM,data:WZIl/PBltIQyoUcY11A=,iv:t4Rc4HEv/9Xvl5KI3ckSQsh0Tdfug1OL9Zoy4nou8Uo=,tag:40cRT1kw+ZGuHFLXYiNixg==,type:comment]
-PODNET: ENC[AES256_GCM,data:ZebFPMmfYSqsNmqD4A==,iv:zXiB20AMCnpu5qhF6no0bt/AD5AFucjvW9f0WsG9gAI=,tag:mZZfn2IHqLeOaqbdqQhwog==,type:str]
-SVCNET: ENC[AES256_GCM,data:/AgXI/XXmQvVPKZR4w==,iv:a0hUw+ZSPx2HYBxPztDXcJMZcrQWgVtPXMkc/995zxg=,tag:SxuE5seD1uLyWuKZrnGI8A==,type:str]
+#ENC[AES256_GCM,data:WLRtwEtGNCE+156H7faEuAHfhs3eXMxTmW5epHrnpdtlit6E+bhk+RKQAYNR1vZkNQb/qITwXEoiMBQCmC01XoI=,iv:6QRGzydOkkk1ZPza4/c724ZCpLl0wj1QbWvYx63rk1I=,tag:Y8STqXcBOimnCoECckgziA==,type:comment]
+#ENC[AES256_GCM,data:mBkaG5SIoNko3deb11OaZxsOxQOV4irzAyAuvDgapmCMaI6ZPC4V7iFlXOQ=,iv:xpQ3nXtVY4wEJ6j7t25YGtIXDnNJSn1UnYcUxWXA+Io=,tag:rIg4qJYOwa3I7IVNpOV95w==,type:comment]
+VIP: ENC[AES256_GCM,data:2dBFBH93U0V5vhxMyw==,iv:8iXzii3N7SyGmmShkOL4FeaA0sQ+eM1o+APErZ/78RI=,tag:tI/oKTwNfQ3jdWOj8kpLAA==,type:str]
+#ENC[AES256_GCM,data:OZD658daeWFM9vTwj9WsBWVrB9s+uojtLb93,iv:aC55OVQ0LJ6p+UwS/Zo81xpSnR33yqjZaY/RsFTqTlM=,tag:v3NOIAxE5JSxeAtM3kltfQ==,type:comment]
+#ENC[AES256_GCM,data:yqkH6n6+xzO6AHGrVHjW4vq6qBHICM+44IB+VexlK71llLtVotR8f2V5TbIrZO6omB9xBTPygx3LwirR1XICRroTtdqRsipPMcM1OTV11LJb3MuF+iUYsnI=,iv:AW7YJvyZbWjlI6S6pxSTIfK6qBHVe1a13FDop9ZtkuE=,tag:XVDZQqzczVGZ9Rxlrr5VLQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:A9bU9UyLca75ANsaIyc=,iv:L0Fx/w3erRKwKnjnjgGQ8xDRS073HSU/IBkEjufAKlk=,tag:BlnxbMNjm1TwWHMVrwW/Ag==,type:str]
+#ENC[AES256_GCM,data:gugpxX0A4+ESDG58t6i6Wjcdp3vr+hHCOW8yWmg6mMbV3w==,iv:1iOU059V3u8ZGG5chQuzhXQojrS8vUoFO2RCf6zlPJA=,tag:l7rFgZJU8BiUWBr5rPIEXg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:b4R7y5EQNXP/RoBLoA==,iv:6refqFGVC4KI66FiwTNlkd3xKXP3aEfq9kixe8YRy7I=,tag:lse8k00huV4wzdG/ukcvkA==,type:str]
+#ENC[AES256_GCM,data:6XmkjZdVVKcVa46T2x5n7I7hG+KoRGKrhIov+HWEvu99/zpc5nKetw7i/P+iRy0=,iv:kmoevEJpM/Mk+3a2EnAWt2sjRenvi16Bs1t0F6rpg74=,tag:4+u29/hgGlxhNfKnaeiyKQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:BN6tjq5MttRSwAV1iRfeh8h+zLoCwdXsL5IASGKiTA==,iv:JrnUbDLNL11920wNYfUbxswB6pDPxN4QBNb3Y7hDnw0=,tag:EfYClNtZnogjpHlIEzhBGQ==,type:str]
+#ENC[AES256_GCM,data:PzbD44Sn7ljOCE4yV1zgqeDLlL0jcVF61DlSe/+I4PE/v2xz8flfSq/SritPLvljIi6Rf1Hc69yWGUpuJ/QqIzlEKAagXpBc88lDt6muRLRhcg==,iv:PryN7vVKQUEqBakntqffOgrgjsSmwx0fQ07xoikLFjU=,tag:6m+hTJ5s7LycHVzZnSC7ww==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:6iM9og6aOBH4kZcSxPFr,iv:GKn2fLhFC73o2pDeCFlcYtSWQM/c1PwZbpESyqBBNCc=,tag:STy2GGuN6ema5Hew2/TZng==,type:str]
+#ENC[AES256_GCM,data:BEhEkpGtYidMU0LfjDSolksmwD8Pmnhnt3hQzOxlN5uo,iv:a11799cEPjq/OBg+sK7FGVb4v4CseUEg0wGkWrQWoSc=,tag:JNijI42Bd17WQvxQNWGiFw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:TdYl3zKB7WqfWjZJBDhI,iv:+P9OmfBwbosFx8AMsuARTRvRLZCpYKzHxQmz1jm5ZTE=,tag:OVV0zNy7rHgUwH49A5U7bA==,type:str]
+#ENC[AES256_GCM,data:/9yN6w2zJjNLoNHHLWLMU28UgNjp8RybR0qKK0DmTEi6JT/ZYubxPSeWSLWd+tLxe/uqE6zNfkskJ94adOvQmX14E/PnEeAW5tvLPpm70Tw=,iv:0w8mgVwODodOIgVAK3Lx+NCsNIDpiTu5aYLWWNUJfGI=,tag:6UaEv2a+BN5JPt6X29hgpA==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:VKjubPFkX5v9bZ3hZQ8M,iv:tcKZRJh7309uS3Pcju2X2DJjTQW3GY2TOAGQ01Ee/0g=,tag:J3MGCYhBtmdSrPL2rjfMhw==,type:str]
+#ENC[AES256_GCM,data:Vcq6/RGFgy1Wyi4HeyaHJKOoOrufW7WdcDrr8WJ8rhgfHiGZQHPBraq+zDSlG2488whWGhzZJmUVoT65z7Dl7Xn+UD1ncxHjZdb4lfxd5evOTwG/3SF1,iv:XlhethcsgZQiikXn1rImXCBV1qf+ZGfXRZIujgWV0Tk=,tag:ecl2OYJ+DoqeLbBFPpVb3A==,type:comment]
+#ENC[AES256_GCM,data:rvjBrFOZNLxRy0tciuthOEG4HStoR4h5BZNkpU46usJukS3/ahAvNylgleKqX1h8ZuWQj/GZ2wBSAtf8dBnco2mD1STrF7JOb6yFoizvOKmdPJx8Hq9cXxGaf8ogs1wmPbwKN9Tc+Z9LRhGAhIlb7tAQpjPmpTA8cMN+ww==,iv:PzVp821jaJz/3xMrVcZX+KnwPHMBuMirpEyGEMLd9gY=,tag:UXBJnG7XsQqPHR02+tGNsg==,type:comment]
+#ENC[AES256_GCM,data:YvNw6d7HQQOBD6uQhFdvQwGqQqOkmlM1iR/1AdU9d+5507IoOL/ftziFsFv8z4s6VJfP7Pyc/AQsAynkXri/VLIce4upxWmq8kK88e7ihMI=,iv:D8+3l6xGqQVlkpyD17KEYuyCLPWNqXXjfAdbr2Q+3iA=,tag:pSNakhamFvoLv8roikV2Xw==,type:comment]
+#ENC[AES256_GCM,data:1Lzde09LONpDK7uBTBrcGJG2L06NmlImcx2oNGrBDSdIbhTK0WnH5/jC39shNzoSDX7tjqTD,iv:PPXhOcXaCSChNMLuBV0n+kM1LzQprf8L8QfRC1c5tIU=,tag:R90kOVQcPsFwWy0IBLImdw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:f4HMEgoEROzxu2rK,iv:HZ07jWBNozXCFc0KGUeV0iTT0WDnBFFSlWqZiSQHwHQ=,tag:QcR5Ece4Z6pff/dJjp1dDw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3CNFP5yumG8xHYDGc38jWCI=,iv:krm3fhjEPEcr8LcrkrFYqLhP7FQtQcepqHPludAC7uU=,tag:n8pAMi4fpAa0gYi8MMSthA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:v4YkANYyMmZ8v69CHlGsGuxJGsWqRk7kxnOzj9ZcMAg=,iv:N9b5FARuPC8HnCXqtcxYmJ3wTry+76Ogejt+xYrtg0M=,tag:VjHqHr6ju5iNX3GUR4G5TQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Mc0RTtPLmXMDNgGepQ89zAyLNQXNEPeYPkjYa7PM4Pchrt/GyNpexQ==,iv:bfDstvlFIVkwLd3j9BuzrRvhr/hl6axiORaOZeQfq2w=,tag:IopYFXIIxss7tBKeDnuQ4A==,type:str]
+#ENC[AES256_GCM,data:j8A3iVP8M9yoIy1W6hg+MES0zNfiiVi2nJN4LgoQEZgZd55XmBJfzjnfFeGid5u33WrUNqkgQE7RmB3nhqSiFQ==,iv:xFITwptTveLl2SGSUmXaHlgvhDw7Fh1gXLCC4Z2/lNg=,tag:NE40R/Q1bivkaUn+ILqUXA==,type:comment]
+#ENC[AES256_GCM,data:BNsoUDyj/BR0SCRUqOPOnKFMwL3CPstW8reLBHNBZjrfM8WNv9mtbwcFOJxn3NYKGzXY/apgAmk=,iv:hpqrHMmn5kdxivyf795Sr9pm7KVdlYV4G3PHq9+9UT0=,tag:BnbJ/BbniGV06Q2qMaN5hA==,type:comment]
+#ENC[AES256_GCM,data:1fCW58z5COqrea2XXBE/8KP+Hgqr+eoaDQ==,iv:CCbCHLf2C9lUmftxLud340aQYku+hdm2c+KnggasySw=,tag:1Yha7sbP+NV6FnADGJnQnQ==,type:comment]
+#ENC[AES256_GCM,data:4XJh7I0oe4bnpz90H6YbUw1B//DbOOrwQdWpFWmVxdvWWrsnySf1SAo4C0ekG/j2/WsN72/2PqdlLXOVzJoHwxQfBCizTuxskC03oZg=,iv:yIoad1NYMdUp7VgusJKCXDx0UGXhqVmGYZM1eOdfQ/s=,tag:a0pCh2MO6q1rJxavraui9A==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:2xC9LaXLUCJC7LtwFtC0Ka7VoflGQ9lc3d0lcPZ+F7vI9UJ8kPJbCr69pUTdzc8C,iv:zPe7lDqF8Vnl9CyH5IlbqgR/BVNUP6tD6qj7Ugm9P1w=,tag:uGDd1qacNekUAHQIYusjTA==,type:str]
+#ENC[AES256_GCM,data:nhybcX6vi8uH14+qBqZk1yzgPMAD8nSYbjJv+z2AnQNXOjK/H6+ax5XZlPiDsp3a/sb2SnpOoiK2RgMe4gk+SR+NDHAtFg0=,iv:8LL7ggeog97b1OF1vTR7uHEhay90vKIf8+ZlkJEPniw=,tag:jYiBQqImw1AOAoRfzt9+XQ==,type:comment]
+#ENC[AES256_GCM,data:MP9aXOomHzINVJOj7gO3WUWQ/EE6dC1mJ/g8lL9V9uQLXEKe54/SO0+IcPT7kIa1I1OpUU8t,iv:fLs7WQqGG1/2vPWQRYhuk0LzFroIkyXsi46ouZ2KaLY=,tag:oHq2TtpjWtm/sR00EyWC/Q==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:JHBysb8YlA==,iv:QQSfudfR76AUa7coK+PBQCY3PHziD6x3+hUkKfVoMug=,tag:P3Iln/ZoD11Zi2HEbpTbXQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:KcAh1OVuFB11xD03oy/Ip+ijcrE=,iv:s01ObStHiWPkB5JIg3ZbmQxwi2eoM/uWnCOPnXuTApA=,tag:Titb2Mc65mP+FXz+hnmNLA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:RByB+QWr0Jq11BE=,iv:eSTMsl2d4+RHskEEc1gDscw3dOYqmPQjp9j3Z1UGoLw=,tag:3e13s4J2uC0qmBYWEzGA9g==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:6fa4VEkQpmzAVuGcMNN8,iv:/Ag37EHlzrKASxxFuuo1xOCzIuWA2ZvSEiN2zW4y5Io=,tag:OYtlrlNew7Grzywsrl+Yzg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:GF2E5t4AT+cMJksKqBgAbevA+pOEnfNu+Q==,iv:CG6hb69iY0UBEhWxe3UZOrWfOPAytU4OdATXYph6lRg=,tag:9ZjA9K7eCwAet/ZFFTAvow==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:GCQmlwy8TVZBIuvxqCUALkBn3rw7LCBg,iv:xfRTvTE7N7Lmz9PF7Xqj6uqCWbaCFXP0/VwKIW5uyjs=,tag:TkSpVqYx9uuDj0LQQB6Qlw==,type:str]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:hSxOZR3kRzZXemxygRrOAX7/,iv:nsemjw12QiiIcFAym15vHKgWko00DROfJqWKo19TwLQ=,tag:hF1C+xmaOv6s+qo17q92oQ==,type:str]
+#ENC[AES256_GCM,data:ptIk4BcjBrqb7e965dQ=,iv:mWvh00oaBLRyLYVS975Ey9M0FYfpC457PNeprbr/71k=,tag:iR/IM4f8D/nM5mx4czpg9A==,type:comment]
+PODNET: ENC[AES256_GCM,data:0ygGuRpDvEfTEOE8JA==,iv:AsZV4tS6PBqwSVMFlnPWsBh5NbX+HVGRnmuf158DURc=,tag:O/gRFcfnikKEU3G2ygSVdg==,type:str]
+SVCNET: ENC[AES256_GCM,data:DUffZH/4TeHkahEOsA==,iv:g49uCQ3KvGZsvf/vnI/xO+m4OP9UssqX0uk1mvCGhUo=,tag:G6Bbspk9uRMu9TsHJFkBwA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,13 +49,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1OSszaW5xdS80LzB3MUZS
-            MFo1ajh3ZlBQTTFMeHZwNEdRWlJnbnowaVdnCjI2R3p3ODFNY0NhZHUzc2lrRDIz
-            TGd0VUN3V3NMRFBncUpRNWxmTUl2bDQKLS0tIDc2QkYzVFIvQzhRMXR0eFZxc0Z3
-            ZGF6QnFRU3V5Um9wTmRRaFlUTlV6bEEKM1PK/B1EFgROdDGLP/97p4x3NSBBn7QB
-            vnaG7/egB/SwzGHVUungHqeUc772GMKrYDZ7EvR3G3DwUXVMNd+2Zg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyM1ZDOG1DcSsycno2ODZV
+            eWs4Mnp1TWdubG55eW0yNjlWRWozVkNmZ0ZzClNzU2twcllvckN4RDFPUXl2SENQ
+            QXlPR0VXejdvOFBpb1NIalg5Rkk1M3MKLS0tIEtIMlFwb0xQOGlEbm9aK3Y3bU1a
+            UlVuWEFjWHVLbzFFNTN3SkNObmJMYXMKhOUULEYJgSm5SDyQfiLNPuy/WMMAJKEx
+            3MMu373GKHvBKy4MHCID1FKlsWOUjVLylmbOWyMNOcdhTlw5DBNwJQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:40:54Z"
-    mac: ENC[AES256_GCM,data:lgaA46J25Cv0rq4Z3QywXDdsO7iDeTCNjVwMsr6EvPK7a9BSpRGhyYyEvJceCrR/OgidS5qZ2DUEsAbAE2EcKCpbJNSwrpJ8y4Bo8sE+SCQP/Bqeg2iy4q2/5TWodIqeJTrine1geVlLPkT4Aw+T8RagwDwmSc313IfyfXhDvtM=,iv:4hXjLZPH8pMiwlDdP42I2O3n/NUuhAiZcwVRQPQttYM=,tag:pCopn8vhHYUM+Nb7BhENqQ==,type:str]
+    lastmodified: "2025-01-09T15:44:02Z"
+    mac: ENC[AES256_GCM,data:Bsm74k4KUh2Oi5jeIunP6ZVqAVu/oJW7927lY9felvs2r8ofQcHABuduUmRKi8ncxNzKve1VLYrfxfN3+axjA3u35VUQOpD/0AmVwEXgcoGArQPAws7zfE8qM2IpQ9ja55PRgKMfM+u2lVDZjZCxZg7kveyp4NXMNc9+d63J4/0=,iv:1/hZHSh1MFaQMmnv7dKqql+ChpqKrw/aYjYFzpV3Ll0=,tag:VHCgZrrHtVlOIJ2ZmCgi7Q==,type:str]
     pgp: []
     version: 3.9.1
